{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 76,
  "lineage": "759f2665-3497-ad5c-e7f6-2122354e04be",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "terraformnic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/tf-centos-rg/providers/Microsoft.Network/networkInterfaces/cent7195-NIC",
            "internal_domain_name_suffix": "fn1uvpfugkbefjg1tlhwn5104a.syx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myNicConfiguration",
                "primary": true,
                "private_ip_address": "10.100.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/tf-centos-rg/providers/Microsoft.Network/publicIPAddresses/cent7195-PIP",
                "subnet_id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/tf-centos-rg/providers/Microsoft.Network/virtualNetworks/terraformvnet/subnets/serversubnet"
              }
            ],
            "location": "koreacentral",
            "name": "cent7195-NIC",
            "private_ip_address": "10.100.1.4",
            "private_ip_addresses": [
              "10.100.1.4"
            ],
            "resource_group_name": "tf-centos-rg",
            "tags": {
              "environment": "Terraform Deployment"
            }
          },
          "dependencies": [
            "azurerm_public_ip.terraformpip",
            "azurerm_resource_group.terraformrg",
            "azurerm_subnet.terraformvnetserversubnet",
            "azurerm_virtual_network.terraformvnet",
            "random_integer.ri"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "newssh_to_tfnic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/tf-centos-rg/providers/Microsoft.Network/networkInterfaces/cent7195-NIC|/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/tf-centos-rg/providers/Microsoft.Network/networkSecurityGroups/terraformnsg",
            "network_interface_id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/tf-centos-rg/providers/Microsoft.Network/networkInterfaces/cent7195-NIC",
            "network_security_group_id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/tf-centos-rg/providers/Microsoft.Network/networkSecurityGroups/terraformnsg"
          },
          "dependencies": [
            "azurerm_network_interface.terraformnic",
            "azurerm_network_security_group.terraformnsg",
            "azurerm_public_ip.terraformpip",
            "azurerm_resource_group.terraformrg",
            "azurerm_subnet.terraformvnetserversubnet",
            "azurerm_virtual_network.terraformvnet",
            "random_integer.ri"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "terraformnsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/tf-centos-rg/providers/Microsoft.Network/networkSecurityGroups/terraformnsg",
            "location": "koreacentral",
            "name": "terraformnsg",
            "resource_group_name": "tf-centos-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Terraform Deployment"
            },
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.terraformrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "newssh",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "2022",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/tf-centos-rg/providers/Microsoft.Network/networkSecurityGroups/terraformnsg/securityRules/ssh2022",
            "name": "ssh2022",
            "network_security_group_name": "terraformnsg",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "tf-centos-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.terraformnsg",
            "azurerm_resource_group.terraformrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "terraformpip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/tf-centos-rg/providers/Microsoft.Network/publicIPAddresses/cent7195-PIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.231.26.3",
            "ip_version": "IPv4",
            "location": "koreacentral",
            "name": "cent7195-PIP",
            "resource_group_name": "tf-centos-rg",
            "sku": "Basic",
            "tags": {
              "environment": "Terraform Deployment"
            }
          },
          "dependencies": [
            "azurerm_resource_group.terraformrg",
            "random_integer.ri"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "terraformvnetserversubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.100.1.0/24",
            "address_prefixes": [
              "10.100.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/tf-centos-rg/providers/Microsoft.Network/virtualNetworks/terraformvnet/subnets/serversubnet",
            "name": "serversubnet",
            "resource_group_name": "tf-centos-rg",
            "virtual_network_name": "terraformvnet"
          },
          "dependencies": [
            "azurerm_resource_group.terraformrg",
            "azurerm_virtual_network.terraformvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "terraformvnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.100.0.0/16"
            ],
            "guid": "bc4a772b-32b4-4282-a4db-9acf66ff7af0",
            "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/tf-centos-rg/providers/Microsoft.Network/virtualNetworks/terraformvnet",
            "location": "koreacentral",
            "name": "terraformvnet",
            "resource_group_name": "tf-centos-rg",
            "tags": {
              "environment": "Terraform Deployment"
            }
          },
          "dependencies": [
            "azurerm_resource_group.terraformrg"
          ]
        }
      ]
    }
  ]
}